...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="menuLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T49-37-496">
                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                <accessibility key="accessibilityConfiguration" identifier="PeroViewController_MenuLabel"/>
                                <gestureRecognizers/>
                                <fontDescription key="fontDescription" type="system" pointSize="41"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
                    <view key="view" contentMode="scaleToFill" id="C89-pN-VAl">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="追加したい献立" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w3i-eQ-UFt">
                                <rect key="frame" x="20" y="100" width="335" height="59"/>
                                <accessibility key="accessibilityConfiguration" identifier="AddMenuViewController_TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A7s-di-3Yj">
                                <rect key="frame" x="143" y="209" width="89" height="65"/>
                                <accessibility key="accessibilityConfiguration" identifier="AddMenuViewController_Button"/>
                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                <state key="normal" title="追加"/>
                                <connections>
                                    <action selector="pushButton:" destination="glf-OI-ivv" eventType="touchUpInside" id="WSd-P0-PFZ"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="追加したい献立" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y1M-ea-Dm0">
                                <rect key="frame" x="20" y="62" width="184" height="28"/>
                                <accessibility key="accessibilityConfiguration" identifier="AddMenuViewController_Label"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                    <view key="view" contentMode="scaleToFill" id="sWl-JZ-Mdf">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="削除したい献立" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bza-NP-ZRp">
                                <rect key="frame" x="20" y="100" width="335" height="59"/>
                                <accessibility key="accessibilityConfiguration" identifier="RemoveMenuViewController_TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bP-PA-V3b">
                                <rect key="frame" x="143" y="209" width="89" height="65"/>
                                <accessibility key="accessibilityConfiguration" identifier="RemoveMenuViewController_Button"/>
                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                <state key="normal" title="削除"/>
                                <connections>
                                    <action selector="pushButton:" destination="m8O-nV-8e1" eventType="touchUpInside" id="hQF-YQ-6HX"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="削除したい献立" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gZ6-UB-2TG">
                                <rect key="frame" x="20" y="62" width="184" height="28"/>
                                <accessibility key="accessibilityConfiguration" identifier="RemoveMenuViewController_Label"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
